force-app/main/default/objects/Lead/fields/EstimatedPremium__c.field-meta.xml
<CustomField>
    <fullName>EstimatedPremium__c</fullName>
    <label>Estimated Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>