force-app/main/default/objects/Lead/fields/InternalRefferalUser_lk__c.field-meta.xml
<CustomField>
    <fullName>InternalRefferalUser_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Refferal User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>