force-app/main/default/objects/Lead/fields/LOB1__c.field-meta.xml
<CustomField>
    <fullName>LOB1__c</fullName>
    <label>LOB1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_LOB1</valueSetName>
    </valueSet>
</CustomField>