force-app/main/default/objects/Lead/fields/UnqualifiedReason__c.field-meta.xml
<CustomField>
    <fullName>UnqualifiedReason__c</fullName>
    <label>Unqualified Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>